# endurain

./: .dockerignore  .env.example  .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_backend  Dockerfile_frontend  MFA_IMPLEMENTATION.md  README.md  ROADMAP.md  SECURITY.md  SWIPE_NAVIGATION_FIX.md  TRADEMARK.md  crowdin.yml  custom_php.ini  docker-compose.yml  docker-compose.yml-multiple-backends.example  docker-compose.yml.example  docker-compose.yml.secrets.example  frontend_env.sh  index.html  main.py  mkdocs.yml  npm_endurain.conf  requirements.txt
backend/: .env  .env.test  Dockerfile  constants.py  database.py  dependencies.py  logging_config.ini  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ab200a7f196_remove_access_tokens_table.py  ab815ee3beae_remove_photo_path_aux_column_from_users_.py
backend/app/: config.py  main.py  models.py  routes.py
backend/app/activities/: crud.py  dependencies.py  models.py  public_router.py  router.py  schema.py  utils.py
backend/app/activity_exercise_titles/: crud.py  models.py  public_router.py  router.py  schema.py
backend/app/activity_laps/: crud.py  models.py  public_router.py  router.py  schema.py  utils.py
backend/app/activity_sets/: crud.py  models.py  public_router.py  router.py  schema.py  utils.py
backend/app/activity_splits/: crud.py  models.py  router.py  schema.py
backend/app/activity_streams/: crud.py  dependencies.py  models.py  public_router.py  router.py  schema.py
backend/app/activity_summaries/: crud.py  router.py  schema.py
backend/app/activity_workout_steps/: crud.py  models.py  public_router.py  router.py  schema.py
backend/app/alembic/: env.py
backend/app/auth/: constants.py  router.py  schema.py  security.py  token_manager.py  utils.py
backend/app/core/: apprise.py  config.py  cryptography.py  database.py  dependencies.py  email.py  file_security.py  logger.py  middleware.py  migrations.py  rate_limit.py  router.py  routes.py  scheduler.py  tracing.py  utils.py
backend/app/dependencies/: dependencies_session.py
backend/app/fit/: utils.py
backend/app/followers/: crud.py  models.py  router.py  schema.py
backend/app/garmin/: activity_utils.py  gear_utils.py  health_utils.py  logger.py  router.py  schema.py  utils.py
backend/app/gears/: crud.py  dependencies.py  models.py  router.py  schema.py  utils.py
backend/app/gpx/: utils.py
backend/app/health_data/: crud.py  models.py  router.py  schema.py  utils.py
backend/app/health_sleep/: crud.py  models.py  router.py  schema.py  sleep_scoring.py
backend/app/health_steps/: crud.py  models.py  router.py  schema.py
backend/app/health_targets/: crud.py  models.py  router.py  schema.py
backend/app/health_weight/: crud.py  models.py  router.py  schema.py  utils.py
backend/app/identity_providers/: crud.py  models.py  public_router.py  router.py  schema.py  service.py  utils.py
backend/app/migrations/: crud.py  logger.py  migration_1.py  migration_2.py  migration_3.py  migration_4.py  migration_5.py  migration_6.py  models.py  schema.py  utils.py
backend/config/: .env  config.py
backend/controllers/: activitiesController.py  activityController.py  activity_streamsController.py  followerController.py  gearController.py  sessionController.py  stravaController.py  userController.py
backend/crud/: access_tokens.py  activities.py  crud_access_tokens.py  crud_activities.py  crud_activity_streams.py  crud_followers.py  crud_gear.py  crud_user_integrations.py  crud_users.py  user_integrations.py  users.py
backend/db/: createdb.sql  db.py
backend/dependencies/: dependencies_activities.py  dependencies_activity_streams.py  dependencies_database.py  dependencies_gear.py  dependencies_security.py  dependencies_session.py  dependencies_users.py
backend/processors/: activity_processor.py  gpx_processor.py  strava_activity_processor.py  strava_athlete_processor.py  strava_gear_processor.py  strava_processor.py
backend/routers/: activities.py  router_activities.py  router_activity_streams.py  router_followers.py  router_gear.py  router_session.py  router_strava.py  router_users.py  session.py  users.py
backend/schemas/: access_tokens.py  activities.py  schema_access_tokens.py  schema_activities.py  schema_followers.py  schema_gear.py  schema_user_integrations.py  schema_users.py
backend/tests/: __init__.py  conftest.py
db/: db.py  (+1 more)
(+1543 files in other folders)
