[tool.poetry]
name = "endurain"
version = "0.5.0"
description = "Endurain API for the Endurain app"
authors = ["João Vitória Silva <8648976+joaovitoriasilva@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
apscheduler = "^3.11.0"
requests = "^2.32.3"
stravalib = "^2.1"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-exporter-otlp = "^1.25.0"
python-multipart = "^0.0.17"
gpxpy = "^1.6.2"
alembic = "^1.14.0"
joserfc = "^1.0.0"
bcrypt = "^4.2.1"
mysqlclient = "^2.2.6"
fitdecode = "^0.10.0"
numpy = "^2.1.3"
geopy = "^2.4.1"
flexparser = "^0.4"
pydantic-core = "^2.27.1"
importlib-metadata = "^8.5.0"
garminconnect = "^0.2.23"
websockets = "^14.1"
timezonefinder = "^6.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
